# epac-flatbuffer-formats

./: .gitignore  COPYRIGHT  README.md  dev.py  pyproject.toml
.github/workflows/: code.yml
schemas/: ADAr_area_detector_array.fbs  f142_logdata.fbs  wa00_waveform.fbs
src/epac/flatbuffers/: __init__.py  area_detector_ADAr.py  arrays_wa00.py  exceptions.py  logdata_f142.py  utils.py
src/epac/flatbuffers/fbschemas/ADAr_area_detector_array/: ADArray.py  Attribute.py
src/epac/flatbuffers/fbschemas/f142_logdata/: ArrayByte.py  ArrayDouble.py  ArrayFloat.py  ArrayInt.py  ArrayLong.py  ArrayShort.py  ArrayUByte.py  ArrayUInt.py  ArrayULong.py  ArrayUShort.py  Byte.py  Double.py  Float.py  Int.py  LogData.py  Long.py  Short.py  UByte.py  UInt.py  ULong.py  UShort.py
src/epac/flatbuffers/fbschemas/wa00_waveform/: DType.py  WaveFormArray.py
src/epac_data_py_skeleton/: __init__.py  hello.py
tests/: test_ADAr.py  test_f142.py  test_hello.py  test_utils.py  test_wa00.py
