[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epac-flatbuffer-formats"
version = "0.0.1"
dependencies = [
    "flatbuffers==23.5.26",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
    "Flake8-pyproject",
    "pytest",
    "pdoc",
]

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "flatbuffers.*"
ignore_missing_imports = true

[tool.flake8]
extend-ignore = [
    "E501", # line too long
]
max-line-length = 88 # Respect black's line length (default 88),
exclude = [
    ".venv",
    ".git",
    # Generated code
    "src/epac/flatbuffers/fbschemas",
    ]
